--- a/anke2/anke_34_20.html
+++ b/anke2/anke_34_20.html
@@ -9,7 +9,7 @@
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート661~676</div>
+                <div class="header-logo">アンケート661~680</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke_1_20.html">アンケート1~20</a>
@@ -37,15 +37,6 @@
                         <a href="./anke_23_20.html">アンケート441~460</a>
                         <a href="./anke_24_20.html">アンケート461~480</a>
                         <a href="./anke_25_20.html">アンケート481~500</a>
-                        <a href="./anke_26_20.html">アンケート501~520</a>
-                        <a href="./anke_27_20.html">アンケート521~540</a>
-                        <a href="./anke_28_20.html">アンケート541~560</a>
-                        <a href="./anke_29_20.html">アンケート561~580</a>
-                        <a href="./anke_30_20.html">アンケート581~600</a>
-                        <a href="./anke_31_20.html">アンケート601~620</a>
-                        <a href="./anke_32_20.html">アンケート621~640</a>
-                        <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~676</a>
                         <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
@@ -58,8 +49,16 @@
                 </div>
                 
                 <div class="contents">
-                    <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)661~676<p>
-                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    <h3 class="section-title">661~680<p>
+                    右に対象ユーザーの投稿一覧、左にアンケートフォームがあります。<p>
+                    Twitterのユーザーに対して性別と年齢推定してください<p>
+                    投稿一覧を見て、左のアンケートフォームにご回答ください<p>
+                    Tweet from @~をクリックするとユーザーページにとびます<p>
+                    判断がつかない場合,投稿がない場合はユーザーページを参照してご回答ください<p>
+                    </h3>
+                    <h4>
+                    注意！読み込みに時間がかかるので複数の別タブを開いてもらえると嬉しいです。
+                    </h4>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfjZmL_odGoFapB_wET0Qt4oAVy-Pkzs9H7xXHd6dPUMdZ3Vg/viewform?embedded=true" 
@@ -166,15 +165,6 @@
                         <a href="./anke_23_20.html">アンケート441~460</a>
                         <a href="./anke_24_20.html">アンケート461~480</a>
                         <a href="./anke_25_20.html">アンケート481~500</a>
-                        <a href="./anke_26_20.html">アンケート501~520</a>
-                        <a href="./anke_27_20.html">アンケート521~540</a>
-                        <a href="./anke_28_20.html">アンケート541~560</a>
-                        <a href="./anke_29_20.html">アンケート561~580</a>
-                        <a href="./anke_30_20.html">アンケート581~600</a>
-                        <a href="./anke_31_20.html">アンケート601~620</a>
-                        <a href="./anke_32_20.html">アンケート621~640</a>
-                        <a href="./anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke_34_20.html">アンケート661~676</a>
                         <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
