--- a/index.html
+++ b/index.html
@@ -58,8 +58,16 @@
                 </div>
                 
                 <div class="contents">
-                    <h3 class="section-title">アンケート内容(@~をクリックすればTwitterページに飛べます)1~20<p>
-                    判断がつかない場合,投稿がない場合はTwitterページを参照していただけると嬉しいです</h3>
+                    <h3 class="section-title">1~20<p>
+                    右に対象ユーザーの投稿一覧、左にアンケートフォームがあります。<p>
+                    Twitterのユーザーに対して性別と年齢推定してください<p>
+                    投稿一覧を見て、左のアンケートフォームにご回答ください<p>
+                    Tweet from @~をクリックするとユーザーページにとびます<p>
+                    判断がつかない場合,投稿がない場合はユーザーページを参照してご回答ください<p>
+                    </h3>
+                    <h4>
+                    注意！読み込みに時間がかかるので複数の別タブを開いてもらえると嬉しいです。
+                    </h4>
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrt4w5t368PXT0CbN1bE4Z3qrfLJffpyXUlpbReKQskXRpjg/viewform?embedded=true" 
@@ -157,41 +165,32 @@
                 <div class="footer-logo">アンケート</div>
                 <div class="footer-list">
                     <ul>
-                        <a href="./anke2/anke_1_20.html">アンケート1~20</a>
-                        <a href="./anke2/anke_2_20.html">アンケート21~40</a>
-                        <a href="./anke2/anke_3_20.html">アンケート41~60</a>
-                        <a href="./anke2/anke_4_20.html">アンケート61~80</a>
-                        <a href="./anke2/anke_5_20.html">アンケート81~100</a>
-                        <a href="./anke2/anke_6_20.html">アンケート101~120</a>
-                        <a href="./anke2/anke_7_20.html">アンケート121~140</a>
-                        <a href="./anke2/anke_8_20.html">アンケート141~160</a>
-                        <a href="./anke2/anke_9_20.html">アンケート161~180</a>
-                        <a href="./anke2/anke_10_20.html">アンケート181~200</a>
-                        <a href="./anke2/anke_11_20.html">アンケート201~220</a>
-                        <a href="./anke2/anke_12_20.html">アンケート221~240</a>
-                        <a href="./anke2/anke_13_20.html">アンケート241~260</a>
-                        <a href="./anke2/anke_14_20.html">アンケート261~280</a>
-                        <a href="./anke2/anke_15_20.html">アンケート281~300</a>
-                        <a href="./anke2/anke_16_20.html">アンケート301~320</a>
-                        <a href="./anke2/anke_17_20.html">アンケート321~340</a>
-                        <a href="./anke2/anke_18_20.html">アンケート341~360</a>
-                        <a href="./anke2/anke_19_20.html">アンケート361~380</a>
-                        <a href="./anke2/anke_20_20.html">アンケート381~400</a>
-                        <a href="./anke2/anke_21_20.html">アンケート401~420</a>
-                        <a href="./anke2/anke_22_20.html">アンケート421~440</a>
-                        <a href="./anke2/anke_23_20.html">アンケート441~460</a>
-                        <a href="./anke2/anke_24_20.html">アンケート461~480</a>
-                        <a href="./anke2/anke_25_20.html">アンケート481~500</a>
-                        <a href="./anke2/anke_26_20.html">アンケート501~520</a>
-                        <a href="./anke2/anke_27_20.html">アンケート521~540</a>
-                        <a href="./anke2/anke_28_20.html">アンケート541~560</a>
-                        <a href="./anke2/anke_29_20.html">アンケート561~580</a>
-                        <a href="./anke2/anke_30_20.html">アンケート581~600</a>
-                        <a href="./anke2/anke_31_20.html">アンケート601~620</a>
-                        <a href="./anke2/anke_32_20.html">アンケート621~640</a>
-                        <a href="./anke2/anke_33_20.html">アンケート641~660</a>
-                        <a href="./anke2/anke_34_20.html">アンケート661~676</a>
-                        <a href="./anke2/anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                        <a href="./anke_1_20.html">アンケート1~20</a>
+                        <a href="./anke_2_20.html">アンケート21~40</a>
+                        <a href="./anke_3_20.html">アンケート41~60</a>
+                        <a href="./anke_4_20.html">アンケート61~80</a>
+                        <a href="./anke_5_20.html">アンケート81~100</a>
+                        <a href="./anke_6_20.html">アンケート101~120</a>
+                        <a href="./anke_7_20.html">アンケート121~140</a>
+                        <a href="./anke_8_20.html">アンケート141~160</a>
+                        <a href="./anke_9_20.html">アンケート161~180</a>
+                        <a href="./anke_10_20.html">アンケート181~200</a>
+                        <a href="./anke_11_20.html">アンケート201~220</a>
+                        <a href="./anke_12_20.html">アンケート221~240</a>
+                        <a href="./anke_13_20.html">アンケート241~260</a>
+                        <a href="./anke_14_20.html">アンケート261~280</a>
+                        <a href="./anke_15_20.html">アンケート281~300</a>
+                        <a href="./anke_16_20.html">アンケート301~320</a>
+                        <a href="./anke_17_20.html">アンケート321~340</a>
+                        <a href="./anke_18_20.html">アンケート341~360</a>
+                        <a href="./anke_19_20.html">アンケート361~380</a>
+                        <a href="./anke_20_20.html">アンケート381~400</a>
+                        <a href="./anke_21_20.html">アンケート401~420</a>
+                        <a href="./anke_22_20.html">アンケート421~440</a>
+                        <a href="./anke_23_20.html">アンケート441~460</a>
+                        <a href="./anke_24_20.html">アンケート461~480</a>
+                        <a href="./anke_25_20.html">アンケート481~500</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
                     </ul>
                 </div>
 
