--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <title>アンケート</title>
+            <title>作業シート1~20</title>
             <link rel="stylesheet" href="./stylesheet2.css">
         </head>
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート1~20</div>
+                <div class="header-logo">作業シート1~20</div>
                 <div class="header-list">
                     <ul>
                         <a href="./anke2/anke_1_20.html">アンケート1~20</a>
@@ -50,8 +50,8 @@
                 
                 <div class="contents">
                     <h3 class="section-title">1~20<p>
-                        Twitterのユーザーに対して性別と年齢推定してください<p>
-                        右に対象ユーザーの投稿一覧、左にアンケートフォームがあります。<p>
+                        Twitterのユーザーに対して性別と年齢推定してください。<p>
+                        <p>
                         投稿一覧を見て、左のアンケートフォームにご回答ください<p>
                         Tweet from @~をクリックするとユーザーページにとびます<p>
                         判断がつかない場合,投稿がない場合はユーザーページを参照してご回答ください<p>
