--- a/anke2/anke_22_20.html
+++ b/anke2/anke_22_20.html
@@ -3,62 +3,55 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <title>アンケート</title>
+            <title>作業シート421~440</title>
             <link rel="stylesheet" href="../stylesheet2.css">
         </head>
 
         <body>
             <div class="header">
-                <div class="header-logo">アンケート421~440</div>
+                <div class="header-logo">作業シート421~440</div>
                 <div class="header-list">
                     <ul>
-                        <a href="./anke_1_20.html">アンケート1~20</a>
-                        <a href="./anke_2_20.html">アンケート21~40</a>
-                        <a href="./anke_3_20.html">アンケート41~60</a>
-                        <a href="./anke_4_20.html">アンケート61~80</a>
-                        <a href="./anke_5_20.html">アンケート81~100</a>
-                        <a href="./anke_6_20.html">アンケート101~120</a>
-                        <a href="./anke_7_20.html">アンケート121~140</a>
-                        <a href="./anke_8_20.html">アンケート141~160</a>
-                        <a href="./anke_9_20.html">アンケート161~180</a>
-                        <a href="./anke_10_20.html">アンケート181~200</a>
-                        <a href="./anke_11_20.html">アンケート201~220</a>
-                        <a href="./anke_12_20.html">アンケート221~240</a>
-                        <a href="./anke_13_20.html">アンケート241~260</a>
-                        <a href="./anke_14_20.html">アンケート261~280</a>
-                        <a href="./anke_15_20.html">アンケート281~300</a>
-                        <a href="./anke_16_20.html">アンケート301~320</a>
-                        <a href="./anke_17_20.html">アンケート321~340</a>
-                        <a href="./anke_18_20.html">アンケート341~360</a>
-                        <a href="./anke_19_20.html">アンケート361~380</a>
-                        <a href="./anke_20_20.html">アンケート381~400</a>
-                        <a href="./anke_21_20.html">アンケート401~420</a>
-                        <a href="./anke_22_20.html">アンケート421~440</a>
-                        <a href="./anke_23_20.html">アンケート441~460</a>
-                        <a href="./anke_24_20.html">アンケート461~480</a>
-                        <a href="./anke_25_20.html">アンケート481~500</a>
-                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                        <a href="./anke_1_20.html">作業シート1~20</a>
+                        <a href="./anke_2_20.html">作業シート21~40</a>
+                        <a href="./anke_3_20.html">作業シート41~60</a>
+                        <a href="./anke_4_20.html">作業シート61~80</a>
+                        <a href="./anke_5_20.html">作業シート81~100</a>
+                        <a href="./anke_6_20.html">作業シート101~120</a>
+                        <a href="./anke_7_20.html">作業シート121~140</a>
+                        <a href="./anke_8_20.html">作業シート141~160</a>
+                        <a href="./anke_9_20.html">作業シート161~180</a>
+                        <a href="./anke_10_20.html">作業シート181~200</a>
+                        <a href="./anke_11_20.html">作業シート201~220</a>
+                        <a href="./anke_12_20.html">作業シート221~240</a>
+                        <a href="./anke_13_20.html">作業シート241~260</a>
+                        <a href="./anke_14_20.html">作業シート261~280</a>
+                        <a href="./anke_15_20.html">作業シート281~300</a>
+                        <a href="./anke_16_20.html">作業シート301~320</a>
+                        <a href="./anke_17_20.html">作業シート321~340</a>
+                        <a href="./anke_18_20.html">作業シート341~360</a>
+                        <a href="./anke_19_20.html">作業シート361~380</a>
+                        <a href="./anke_20_20.html">作業シート381~400</a>
+                        <a href="./anke_21_20.html">作業シート401~420</a>
+                        <a href="./anke_22_20.html">作業シート421~440</a>
+                        <a href="./anke_23_20.html">作業シート441~460</a>
+                        <a href="./anke_24_20.html">作業シート461~480</a>
+                        <a href="./anke_25_20.html">作業シート481~500</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下での作業シート1~29</a>
                     </ul>
                 </div>
             </div>
 
             <div class="main">
                 <div class="copy-container">
-                    <h1>ご協力、お願いします<span>.</span></h1>
-                    <h3></h3>
+
                 </div>
                 
                 <div class="contents">
-                    <h3 class="section-title">421~440<p>
-                    右に対象ユーザーの投稿一覧、左にアンケートフォームがあります。<p>
-                    Twitterのユーザーに対して性別と年齢推定してください<p>
-                    投稿一覧を見て、左のアンケートフォームにご回答ください<p>
-                    Tweet from @~をクリックするとユーザーページにとびます<p>
-                    判断がつかない場合,投稿がない場合はユーザーページを参照してご回答ください<p>
-                    </h3>
-                    <h4>
-                    注意！読み込みに時間がかかるので複数の別タブを開いてもらえると嬉しいです。
-                    </h4>
+                    <h7 class="section-title">作業シート421~440<p>
+                        Twitter のユーザの性別と年齢を推測してフォームに入力して下さい。<p>まず、画面左半面の冒頭にある名前の記入覧に自分の名前を記入して下さい。<p>画面右半面に Twitter ユーザの投稿が表示されていますので、その投稿をざっと見て性別・年齢を推測して下さい。<p>投稿だけで推測できないときは「Tweet from @~」をクリックするとその Twitter ユーザのプロフィールページが表示されますので、それも見て判断して下さい。<p>推測した結果は、画面左半面に表示されているフォームに記入して下さい。N番目のユーザの投稿とそのユーザの性別・年齢を入力するフォームは並んで表示されています。<p>20名の Twitter ユーザの性別・年齢を入力するとひとつのシートの作業が完了します。<p>ウィンドウトップに作業シートのリンクの一覧が表示されていますので、上記の操作を全ての作業シートについて完了して下さい。ただし、どの作業シートを終えたのかは表示されませんので、自分でメモしながら作業して下さい。<p>20名のTwitterの投稿を表示するのに時間がかかります。次に作業するシートを別のタブまたはウィンドウで開いておいて、あらかじめ読み込んでおくことをお薦めします。<p>任意ですが、作業の際に気がついたことや判断に迷ったことなどがありましたら、別途メールでお知らせ下さい。<p>
+                    </h7>
+
                     <div class="contents-item1">
                         
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSer22Sx0Pi8ZSbSoXjuZs_al5iI3yISSoOL0V-tz1qrG8mcqg/viewform?embedded=true" 
@@ -153,35 +146,35 @@
                 </div>
             </div>
             <div class="footer">
-                <div class="footer-logo">アンケート</div>
+                <div class="footer-logo">作業シート</div>
                 <div class="footer-list">
                     <ul>
-                        <a href="./anke_1_20.html">アンケート1~20</a>
-                        <a href="./anke_2_20.html">アンケート21~40</a>
-                        <a href="./anke_3_20.html">アンケート41~60</a>
-                        <a href="./anke_4_20.html">アンケート61~80</a>
-                        <a href="./anke_5_20.html">アンケート81~100</a>
-                        <a href="./anke_6_20.html">アンケート101~120</a>
-                        <a href="./anke_7_20.html">アンケート121~140</a>
-                        <a href="./anke_8_20.html">アンケート141~160</a>
-                        <a href="./anke_9_20.html">アンケート161~180</a>
-                        <a href="./anke_10_20.html">アンケート181~200</a>
-                        <a href="./anke_11_20.html">アンケート201~220</a>
-                        <a href="./anke_12_20.html">アンケート221~240</a>
-                        <a href="./anke_13_20.html">アンケート241~260</a>
-                        <a href="./anke_14_20.html">アンケート261~280</a>
-                        <a href="./anke_15_20.html">アンケート281~300</a>
-                        <a href="./anke_16_20.html">アンケート301~320</a>
-                        <a href="./anke_17_20.html">アンケート321~340</a>
-                        <a href="./anke_18_20.html">アンケート341~360</a>
-                        <a href="./anke_19_20.html">アンケート361~380</a>
-                        <a href="./anke_20_20.html">アンケート381~400</a>
-                        <a href="./anke_21_20.html">アンケート401~420</a>
-                        <a href="./anke_22_20.html">アンケート421~440</a>
-                        <a href="./anke_23_20.html">アンケート441~460</a>
-                        <a href="./anke_24_20.html">アンケート461~480</a>
-                        <a href="./anke_25_20.html">アンケート481~500</a>
-                        <a href="./anke_1_30_50.html">フォロワー数50人以下でのアンケート1~29</a>
+                        <a href="./anke_1_20.html">作業シート1~20</a>
+                        <a href="./anke_2_20.html">作業シート21~40</a>
+                        <a href="./anke_3_20.html">作業シート41~60</a>
+                        <a href="./anke_4_20.html">作業シート61~80</a>
+                        <a href="./anke_5_20.html">作業シート81~100</a>
+                        <a href="./anke_6_20.html">作業シート101~120</a>
+                        <a href="./anke_7_20.html">作業シート121~140</a>
+                        <a href="./anke_8_20.html">作業シート141~160</a>
+                        <a href="./anke_9_20.html">作業シート161~180</a>
+                        <a href="./anke_10_20.html">作業シート181~200</a>
+                        <a href="./anke_11_20.html">作業シート201~220</a>
+                        <a href="./anke_12_20.html">作業シート221~240</a>
+                        <a href="./anke_13_20.html">作業シート241~260</a>
+                        <a href="./anke_14_20.html">作業シート261~280</a>
+                        <a href="./anke_15_20.html">作業シート281~300</a>
+                        <a href="./anke_16_20.html">作業シート301~320</a>
+                        <a href="./anke_17_20.html">作業シート321~340</a>
+                        <a href="./anke_18_20.html">作業シート341~360</a>
+                        <a href="./anke_19_20.html">作業シート361~380</a>
+                        <a href="./anke_20_20.html">作業シート381~400</a>
+                        <a href="./anke_21_20.html">作業シート401~420</a>
+                        <a href="./anke_22_20.html">作業シート421~440</a>
+                        <a href="./anke_23_20.html">作業シート441~460</a>
+                        <a href="./anke_24_20.html">作業シート461~480</a>
+                        <a href="./anke_25_20.html">作業シート481~500</a>
+                        <a href="./anke_1_30_50.html">フォロワー数50人以下での作業シート1~29</a>
                     </ul>
                 </div>
 
