--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <title><h7 class="section-title">作業ホーム</title>
+            <title>作業ホーム</title>
             <link rel="stylesheet" href="./stylesheet1.css">
         </head>
 
