--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <title><h7 class="section-title">作業ホーム</title>
+            <title>作業ホーム</title>
             <link rel="stylesheet" href="./stylesheet1.css">
         </head>
 
@@ -12,29 +12,40 @@
                 <div class="header-logo">作業ホーム</div>
                 <div class="header-list">
                     <ul>
-                        <a href="./anke0~100/anke_1_20.html">作業シート1~100</a>
-                        <a href="./anke100~200/anke_6_20.html">作業シート101~200</a>
-                        <a href="./anke200~300/anke_11_20.html">作業シート201~300</a>
-                        <a href="./anke300~400/anke_16_20.html">作業シート301~400</a>
-                        <a href="./anke400~500/anke_21_20.html">作業シート401~500</a>
+                        <a href="./anke0~100/anke_1_20.html">割り当て1~100</a>
+                        <a href="./anke100~200/anke_6_20.html">割り当て101~200</a>
+                        <a href="./anke200~300/anke_11_20.html">割り当て201~300</a>
+                        <a href="./anke300~400/anke_16_20.html">割り当て301~400</a>
+                        <a href="./anke400~500/anke_21_20.html">割り当て401~500</a>
                         <a href="./anke2/anke_1_30_50.html">フォロワー数50人以下での作業シート1~29</a>
                     </ul>
                 </div>
             </div>
             <div class="main">
                 <div class="contents">
-                    <h7 class="section-title">
-                        Twitter のユーザの性別と年齢を推測してフォームに入力して下さい。<p>まず、画面左半面の冒頭にある名前の記入覧に自分の名前を記入して下さい。<p>画面右半面に Twitter ユーザの投稿が表示されていますので、その投稿をざっと見て性別・年齢を推測して下さい。<p>投稿だけで推測できないときは「Tweet from @~」をクリックするとその Twitter ユーザのプロフィールページが表示されますので、それも見て判断して下さい。<p>推測した結果は、画面左半面に表示されているフォームに記入して下さい。N番目のユーザの投稿とそのユーザの性別・年齢を入力するフォームは並んで表示されています。<p>20名の Twitter ユーザの性別・年齢を入力するとひとつのシートの作業が完了します。<p>ウィンドウトップに作業シートのリンクの一覧が表示されていますので、上記の操作を全ての作業シートについて完了して下さい。ただし、どの作業シートを終えたのかは表示されませんので、自分でメモしながら作業して下さい。<p>20名のTwitterの投稿を表示するのに時間がかかります。次に作業するシートを別のタブまたはウィンドウで開いておいて、あらかじめ読み込んでおくことをお薦めします。<p>任意ですが、作業の際に気がついたことや判断に迷ったことなどがありましたら、別途メールでお知らせ下さい。<p>
+                    <div class="section-title">
+                        Twitter のユーザの性別と年齢を推測してフォームに入力して下さい。<p>
+                        まず、「割り当てX01〜Y00」のうち自分が担当するリンクをクリックして下さい。<p>
+                        作業シートが表示されます。Twitter ユーザの全ての投稿が表示されるまで待って下さい。かなり時間がかかります。<p>
+                        最初に、画面左半面の冒頭にある名前の記入覧に自分の名前を記入して下さい。<p>
+                        として下さい。ユーザの投稿が表示されないとツイートとフォームが並んで表示されないので、全部表示されるまで待つことは説明しておいた方がいいでしょう。<p>
+                        画面右半面に Twitter ユーザの投稿が表示されていますので、その投稿をざっと見て性別・年齢を推測して下さい。<p>
+                        投稿だけで推測できないときは「Tweet from @~」をクリックするとその Twitter ユーザのプロフィールページが表示されますので、それも見て判断して下さい。<p>
+                        推測した結果は、画面左半面に表示されているフォームに記入して下さい。N番目のユーザの投稿とそのユーザの性別・年齢を入力するフォームは並んで表示されています。<p>
+                        20名の Twitter ユーザの性別・年齢を入力するとひとつのシートの作業が完了します。<p>
+                        ウィンドウトップに作業シートのリンクの一覧が表示されていますので、上記の操作を全ての作業シートについて完了して下さい。ただし、どの作業シートを終えたのかは表示されませんので、自分でメモしながら作業して下さい。<p>
+                        20名のTwitterの投稿を表示するのに時間がかかります。次に作業するシートを別のタブまたはウィンドウで開いておいて、あらかじめ読み込んでおくことをお薦めします。<p
+                        >任意ですが、作業の際に気がついたことや判断に迷ったことなどがありましたら、別途メールでお知らせ下さい。<p>
                         下記の作業ホームから指定された作業ページに移動して下さい。<p>
                     </h7>
                 </div>
                 <div class="main-list">
                     <ul>
-                        <a href="./anke0~100/anke_1_20.html">作業シート1~100</a>
-                        <a href="./anke100~200/anke_6_20.html">作業シート101~200</a>
-                        <a href="./anke200~300/anke_11_20.html">作業シート201~300</a>
-                        <a href="./anke300~400/anke_16_20.html">作業シート301~400</a>
-                        <a href="./anke400~500/anke_21_20.html">作業シート401~500</a>
+                        <a href="./anke0~100/anke_1_20.html">割り当て1~100</a>
+                        <a href="./anke100~200/anke_6_20.html">割り当て101~200</a>
+                        <a href="./anke200~300/anke_11_20.html">割り当て201~300</a>
+                        <a href="./anke300~400/anke_16_20.html">割り当て301~400</a>
+                        <a href="./anke400~500/anke_21_20.html">割り当て401~500</a>
                         <a href="./anke2/anke_1_30_50.html">フォロワー数50人以下での作業シート1~29</a>
                     </ul>
 
@@ -44,11 +55,11 @@
                 <div class="footer-logo">作業ホーム</div>
                 <div class="footer-list">
                     <ul>
-                        <a href="./anke0~100/anke_1_20.html">作業シート1~100</a>
-                        <a href="./anke100~200/anke_6_20.html">作業シート101~200</a>
-                        <a href="./anke200~300/anke_11_20.html">作業シート201~300</a>
-                        <a href="./anke300~400/anke_16_20.html">作業シート301~400</a>
-                        <a href="./anke400~500/anke_21_20.html">作業シート401~500</a>
+                        <a href="./anke0~100/anke_1_20.html">割り当て1~100</a>
+                        <a href="./anke100~200/anke_6_20.html">割り当て101~200</a>
+                        <a href="./anke200~300/anke_11_20.html">割り当て201~300</a>
+                        <a href="./anke300~400/anke_16_20.html">割り当て301~400</a>
+                        <a href="./anke400~500/anke_21_20.html">割り当て401~500</a>
                         <a href="./anke2/anke_1_30_50.html">フォロワー数50人以下での作業シート1~29</a>
                     </ul>
                 </div>
