--- a/anke2/test.html
+++ b/anke2/test.html
@@ -3,13 +3,13 @@
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width-device-width, initial-scale=1.0">
-            <title>フォロワー数50人以下での作業シート1~29</title>
+            <title>作業シート1~29</title>
             <link rel="stylesheet" href="../stylesheet3.css">
         </head>
 
         <body>
             <div class="header">
-                <div class="header-logo">フォロワー数50人以下での作業シート1~29</div>
+                <div class="header-logo">作業シート1~29</div>
                 <div class="header-list">
                     <ul>
                         
@@ -30,8 +30,8 @@
                     </h7>
                     <div class="contents-item1">
                         
-                        <iframe src='https://docs.google.com/forms/d/e/1FAIpQLSfwYhuC3pJJ5jo_kkhb83XqSF95nPUSJo1ja0BprXv71AdrJg/viewform?usp=sf_link'
-                        width="500"height="18180" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOetQaCFlAiHrgyiqO_i2RqgMICPCQ8XO_CRdPvjsv8amqHw/viewform?embedded=true" 
+                        width="500"height="17945.2" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
                     </div>
                     <div class="contents-item2">
                         <div class="user">
