--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         20名のTwitterの投稿を表示するのに時間がかかります。次に作業するシートを別のタブまたはウィンドウで開いておいて、あらかじめ読み込んでおくことをお薦めします。<p
                         >任意ですが、作業の際に気がついたことや判断に迷ったことなどがありましたら、別途メールでお知らせ下さい。<p>
                         下記の作業ホームから指定された作業ページに移動して下さい。<p>
-                    </h7>
+                    </div>
                 </div>
                 <div class="main-list">
                     <ul>
