--- a/anke2/anke_1_30_50.html
+++ b/anke2/anke_1_30_50.html
@@ -30,7 +30,7 @@
                     </h7>
                     <div class="contents-item1">
                         
-                        <iframe src='https://docs.google.com/forms/d/e/1FAIpQLSfwYhuC3pJJ5jo_kkhb83XqSF95nPUSJo1ja0BprXv71AdrJg/viewform?usp=sf_link'
+                        <iframe src='https://docs.google.com/forms/d/e/1FAIpQLSfhA8rAo73iXO9WeaCrh4-dtlaHIWLxUibpwhapPHoDwO_mcA/viewform?embedded=true'
                         width="500"height="18180" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
                     </div>
                     <div class="contents-item2">
