--- a/anke2/anke_1_30_50.html
+++ b/anke2/anke_1_30_50.html
@@ -26,7 +26,7 @@
             <div class="main">
                 <div class="contents">
                     <h7 class="section-title"><p>
-                        Twitter のユーザの性別と年齢を推測してフォームに入力して下さい。<p>まず、画面左半面の冒頭にある名前の記入覧に自分の名前を記入して下さい。<p>画面右半面に Twitter ユーザの投稿が表示されていますので、その投稿をざっと見て性別・年齢を推測して下さい。<p>投稿だけで推測できないときは「Tweet from @~」をクリックするとその Twitter ユーザのプロフィールページが表示されますので、それも見て判断して下さい。<p>推測した結果は、画面左半面に表示されているフォームに記入して下さい。N番目のユーザの投稿とそのユーザの性別・年齢を入力するフォームは並んで表示されています。<p>29名の Twitter ユーザの性別・年齢を入力するとひとつのシートの作業が完了します。<p>ウィンドウトップに作業シートのリンクの一覧が表示されていますので、上記の操作を全ての作業シートについて完了して下さい。ただし、どの作業シートを終えたのかは表示されませんので、自分でメモしながら作業して下さい。<p>29名のTwitterの投稿を表示するのに時間がかかります。次に作業するシートを別のタブまたはウィンドウで開いておいて、あらかじめ読み込んでおくことをお薦めします。<p>任意ですが、作業の際に気がついたことや判断に迷ったことなどがありましたら、別途メールでお知らせ下さい。<p>
+                        皆様にお願いしたい作業は、Twitter のユーザの性別と年齢を推測し、フォームに記入することです。<p>まず、画面左半面の冒頭にある名前の記入覧に自分の名前を記入して下さい。<p>画面右半面に Twitter ユーザの投稿が表示されていますので、その投稿をざっと見て性別・年齢を推測して下さい。<p>投稿だけで推測できないときは「Tweet from @~」をクリックするとその Twitter ユーザのプロフィールページが表示されますので、それも見て判断して下さい。<p>推測した結果は、画面左半面に表示されているフォームに記入して下さい。N番目のユーザの投稿とそのユーザの性別・年齢を入力するフォームは並んで表示されています。<p>20名の Twitter ユーザの性別・年齢を入力するとひとつのシートの作業が完了します。<p>ウィンドウトップに作業シートのリンクの一覧が表示されていますので、上記の操作を全ての作業シートについて完了して下さい。ただし、どの作業シートを終えたのかは表示されませんので、自分でメモしながら作業して下さい。<p>20名のTwitterの投稿を表示するのに時間がかかります。次に作業するシートを別のタブまたはウィンドウで開いておいて、あらかじめ読み込んでおくことをお薦めします。<p>任意ですが、作業の際に気がついたことや判断に迷ったことなどがありましたら、別途メールでお知らせ下さい。<p>
                     </h7>
                     <div class="contents-item1">
                         
